[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astryin"
version = "0.1.0"
description = "Navigation behavior analysis for robotics systems"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer",
    "rich",
    "numpy",
    "matplotlib",
]

[project.scripts]
astryin = "astryin.cli.main:app"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatck.build.targets.wheel]
packages = ["src/astryin"]

[project.urls]
Homepage = "https://github.com/kehan-zhou/astryin"
Issues = "https://github.com/kehan-zhou/astryin/issues"